--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -32,9 +32,9 @@
                 <!-- 404 Error Text -->
                 <div class="text-center">
                     <div class="error mx-auto" data-text="404">404</div>
-                    <p class="lead text-gray-800 mb-5">Page Not Found</p>
-                    <p class="text-gray-500 mb-0">It looks like you found a glitch in the matrix...</p>
-                    <a href="index.html">&larr; Back to Dashboard</a>
+                    <p class="lead text-gray-800 mb-5">页面没找到……</p>
+                    <p class="text-gray-500 mb-0">你来到了知识的荒原……</p>
+                    <a href="#" onclick="history.back(-1);">&larr; 返回上一页</a>
                 </div>
 
             </div>
