--- a/src/main/resources/templates/allUser/testUpload.html
+++ b/src/main/resources/templates/allUser/testUpload.html
@@ -18,24 +18,60 @@
     <link href="../css/cropper.css" rel="stylesheet">
     <title>Title</title>
 </head>
+<style>
+    .preview {
+        box-shadow: 0 0 5px #adadad;
+        overflow: hidden;
+    }
+
+    .preview-lg {
+        height: 144px;
+        width: 144px;
+    }
+
+    .preview-md {
+        height: 72px;
+        width: 72px;
+    }
+
+    .preview-sm {
+        height: 32px;
+        width: 32px;
+    }
+
+    .preview-r {
+        border-radius: 50%;
+        height: 32px;
+        width: 32px;
+    }
+</style>
 <body>
-<!--<a class="btn btn-primary" href="#" data-toggle="modal" data-target="#testModal">-->
-<!--    <i class="fa fa-image fa-fw mr-2 text-gray-400"></i>-->
-<!--    选择头像-->
-<!--</a>-->
-<button class="btn btn-primary" onclick="showDIV()">上传头像</button>
-<div class="card col-xl-6 align-items-center m-auto" hidden="hidden">
-    <div class="card-body">
-        <div class="imgBox" style="max-height: 500px;width: auto">
-        <button id="uploadButton" class="btn btn-primary" onclick="$('#uploadFile').click();">上传</button>
-        <img src="" alt="" id="img" style="max-width: 100%;height: auto;">
-        <input name="file" type="file" style="display: none" id="uploadFile"
-               accept="image/jpg, image/png, image/jpeg">
+<button class="btn btn-primary" onclick="$('#uploadFile').click();">上传头像</button>
+<div class="container">
+    <div class="row" hidden="hidden">
+        <div class="imgBox col-md-7" style="max-height: 400px;max-width: 100%;box-shadow: 0 0 5px #adadad;">
+            <img src="" alt="" id="img" style="max-width: 100%;height: auto;">
+            <input name="file" type="file" style="display: none" id="uploadFile"
+                   accept="image/jpg, image/png, image/jpeg">
+        </div>
+
+        <div class="col-md-3 mr-auto align-items-center">
+            <div class="preview preview-lg"></div>
+            <div class="preview preview-md"></div>
+            <div class="preview preview-sm"></div>
+            <div class="preview preview-r"></div>
         </div>
     </div>
-    <div class="card-footer">
-        <button class="btn btn-secondary" type="button" onclick="clearImg()">取消</button>
-        <a class="btn btn-primary" href="#">确认</a>
+    <div class="row mt-1" hidden="hidden">
+        <div class="btn-group">
+            <button class="btn btn-secondary" onclick="clearImg()">取消</button>
+            <button class="btn btn-primary" onclick="getData()">确认</button>
+            <button class="btn btn-primary" onclick="resetCropper()">重置</button>
+        </div>
+        <div class="btn-group ml-1">
+            <button class="btn btn-primary" onclick="rotate('-45')"><i class="fa fa-rotate-left"></i></button>
+            <button class="btn btn-primary" onclick="rotate('45')"><i class="fa fa-rotate-right"></i></button>
+        </div>
     </div>
 </div>
 
@@ -65,20 +101,42 @@
     </div>
 </div>
 <script>
-    function clearImg() {
-        $("img").attr("src","");
-        $("#uploadButton").removeAttr("hidden");
-        $(".cropper-container").attr("hidden","hidden")
+    function getData() {
+        var cropCanvas = Cropper.cropper('getCroppedCanvas');
+        var cropUrl = cropCanvas.toDataURL('image/jpeg', 0.5);
+        $.ajax({
+            type: "POST",
+            url:'/testUpload/upload',
+            dataType:"json",
+            data:{
+                "imgData":cropUrl
+            }
+        });
+        console.log(cropUrl)
     }
-    function showDIV() {
-        $("div").removeAttr("hidden")
+
+    function clearImg() {
+        $("img").attr("src", "");
+        $("#uploadButton").removeAttr("hidden");
+        $(".cropper-container").attr("hidden", "hidden");
+        $(".row").attr("hidden", "hidden")
+    }
+
+    function rotate(angle) {
+        Cropper.cropper("rotate", angle)
     }
 
     $(function () {
         $("#uploadFile").change(function () {
+            $(".row").removeAttr("hidden");
+            $("#uploadFile").click();
             uploadImg(this);
         })
     });
+
+    function resetCropper() {
+        Cropper.cropper('reset');
+    }
 
     function uploadImg(tag) {
         var file = tag.files[0];
@@ -87,8 +145,7 @@
         reader.onload = function () {
             console.log(this.result);
             var imgSrc = this.result;
-            $("#uploadButton").attr("hidden", "hidden");
-            $("#img").cropper('replace', imgSrc, false);
+            Cropper = $("#img").cropper('replace', imgSrc, false);
         }
     }
 
@@ -96,6 +153,7 @@
         aspectRatio: 1 / 1,
         viewMode: 1,
         dragMode: "move",
+        preview: $('.preview'),
         crop: function (e) {
             console.log(e);
         }
