--- a/src/main/resources/templates/allUser/testUpload.html
+++ b/src/main/resources/templates/allUser/testUpload.html
@@ -20,8 +20,15 @@
 </head>
 <style>
     .preview {
+        float: left;
+        margin-bottom: .5rem;
+        margin-right: .5rem;
         box-shadow: 0 0 5px #adadad;
         overflow: hidden;
+    }
+
+    .preview > img {
+        max-width: 100%;
     }
 
     .preview-lg {
@@ -44,6 +51,10 @@
         height: 32px;
         width: 32px;
     }
+
+    .docs-preview {
+        margin-right: -1rem;
+    }
 </style>
 <body>
 <button class="btn btn-primary" onclick="$('#uploadFile').click();">上传头像</button>
@@ -54,8 +65,8 @@
             <input name="file" type="file" style="display: none" id="uploadFile"
                    accept="image/jpg, image/png, image/jpeg">
         </div>
-
-        <div class="col-md-3 mr-auto align-items-center">
+        <div class="col-md-3 mr-auto align-items-center clearfix docs-preview">
+            <p>预览图</p>
             <div class="preview preview-lg"></div>
             <div class="preview preview-md"></div>
             <div class="preview preview-sm"></div>
@@ -64,39 +75,19 @@
     </div>
     <div class="row mt-1" hidden="hidden">
         <div class="btn-group">
-            <button class="btn btn-secondary" onclick="clearImg()">取消</button>
-            <button class="btn btn-primary" onclick="getData()">确认</button>
-            <button class="btn btn-primary" onclick="resetCropper()">重置</button>
+            <button class="btn btn-primary" onclick="getData()">
+                <i class="fa fa-check"></i>
+            </button>
+            <button class="btn btn-primary" onclick="resetCropper()">
+                <i class="fa fa-refresh"></i>
+            </button>
+            <button class="btn btn-secondary" onclick="clearImg()">
+                <i class="fa fa-remove"></i>
+            </button>
         </div>
         <div class="btn-group ml-1">
             <button class="btn btn-primary" onclick="rotate('-45')"><i class="fa fa-rotate-left"></i></button>
             <button class="btn btn-primary" onclick="rotate('45')"><i class="fa fa-rotate-right"></i></button>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="testModal" tabindex="-1" role="dialog" aria-labelledby="testModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="testModalLabel">选择头像</h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <!--                <div class="box">-->
-                <!--                    <button id="uploadButton" class="btn btn-primary" onclick="$('#uploadFile').click();">上传</button>-->
-                <!--                    <img src="" alt="" id="img" style="max-width: 100%;height: auto;">-->
-                <!--                    <input name="file" type="file" style="display: none" id="uploadFile"-->
-                <!--                           accept="image/jpg, image/png, image/jpeg">-->
-                <!--                </div>-->
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">取消</button>
-                <a class="btn btn-primary" href="#">确认</a>
-            </div>
         </div>
     </div>
 </div>
@@ -106,11 +97,16 @@
         var cropUrl = cropCanvas.toDataURL('image/jpeg', 0.5);
         $.ajax({
             type: "POST",
-            url:'/testUpload/upload',
-            dataType:"json",
-            data:{
-                "imgData":cropUrl
-            }
+            url: '/testUpload/upload',
+            dataType: "json",
+            data: {
+                "imgData": cropUrl
+            },
+            success: function (data) {
+                if (data['status'] == "SUCCESS") {
+                    alert("上传成功");
+                } else alert("上传失败")
+            },
         });
         console.log(cropUrl)
     }
