--- a/src/main/resources/templates/user/UserIndex.html
+++ b/src/main/resources/templates/user/UserIndex.html
@@ -17,7 +17,7 @@
     <title>用户界面</title>
 </head>
 <body id="page-top">
-<div th:replace="allUser/header::header"></div>
+<div th:replace="allUser/userHeader::userHeader"></div>
 <div id="res" hidden>
 <ul>
     <li>首页</li>
