--- a/src/main/resources/templates/admin/AddGroup.html
+++ b/src/main/resources/templates/admin/AddGroup.html
@@ -2,16 +2,65 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="../js/jquery-3.4.1.min.js"></script>
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.js"></script>
+    <script src="../js/sb-admin-2.js"></script>
+    <script src="../js/cropper.js"></script>
+    <script src="../js/jquery.easing.js"></script>
+    <script src="../js/jquery-cropper.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap-select.js"></script>
+    <script src="../js/bootstrap-select-defaults-zh_CN.js"></script>
     <link href="../css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/font-awesome.css">
+    <link href="../css/sb-admin-2.css" rel="stylesheet">
+    <link href="../css/font-awesome.css" rel="stylesheet">
+    <link href="../css/cropper.css" rel="stylesheet">
+    <link href="css/bootstrap-select.css" rel="stylesheet">
     <title>代表团管理-Гулаш&nbsp;система&nbsp;会议管理系统</title>
 </head>
 <body>
-<h1>代表团管理</h1>
-<hr>
-
+<!-- 将侧边栏及导航栏抽出为单独的文件，减少冗余度-->
+<div th:replace="allUser/adminHeader::adminHeader"></div>
+<div id="res" hidden>
+    <h1>代表团管理</h1>
+    <hr>
+    <div class="card">
+        <div class="card-header">添加代表团</div>
+        <div class="card-body">
+            <form>
+                <label for="school">所属学校</label>
+                <select id="school" class="selectpicker" title="请选择一所学校">
+                    <option th:value="1" th:text="'北京大学'"></option>
+                    <option th:value="2" th:text="'清华大学'"></option>
+                </select>
+                <label for="delegateName">负责代表</label>
+                <select id="delegateName" class="selectpicker" title="请选择一位代表">
+                    <option th:value="1" th:text="'冬马和纱'"></option>
+                    <option th:value="2" th:text="'小木曾'"></option>
+                    <option th:value="3" th:text="'北原'"></option>
+                    <option th:value="4" th:text="'铃原'"></option>
+                </select>
+                <label for="groupSize">代表团容量</label>
+                <input id="groupSize" placeholder="请输入代表团容量" type="number">
+            </form>
+        </div>
+        <div class="card-footer">
+            <button class="btn btn-primary">保存更改</button>
+        </div>
+    </div>
+</div>
 </body>
+<script>
+    $(function () {
+        $('#main').append($('#res').html());
+        $('.selectpicker').selectpicker(
+            {
+                liveSearch: true
+            }
+        );
+        $('#res').remove();
+    })
+</script>
 </html>
