--- a/src/main/resources/templates/allUser/adminHeader.html
+++ b/src/main/resources/templates/allUser/adminHeader.html
@@ -113,7 +113,7 @@
             <div id="collapseCommittee" class="collapse" aria-labelledby="headingCommittee" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="#">代表团列表</a>
-                    <a class="collapse-item" th:href="@{/admin/addGroup}">添加代表团</a>
+                    <a class="collapse-item" th:href="@{/admin/addGroupPage}">添加代表团</a>
                 </div>
             </div>
         </li>
